@@ -4,6 +4,7 @@ Revision history for libev, a high-performance and full-featured event loop
 	- implement ev_async watchers.
         - only initialise signal pipe on demand.
 	- make use of sig_atomic_t configurable.
+        - improved ev_child documentation.
 
 3.0  Mon Jan 28 13:14:47 CET 2008
 	- API/ABI bump to version 3.0.
